fix list and implement proper list data structure